# c---sample

./: CMakeLists.txt  README.md
cmake/: GetGitVersion.cmake
include/: parent.h
src/: CMakeLists.txt  main.cpp  parent.cpp
