cmake_minimum_required(VERSION 3.10)
include(cmake/GetGitVersion.cmake)
get_git_version(PROJECT_VERSION)
project(CPP_SAMPLE VERSION ${PROJECT_VERSION})
message(STATUS "Project version: ${PROJECT_VERSION}")
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(VERSION_UPDATE_FROM_GIT True)
add_subdirectory(src)