cmake_minimum_required(VERSION 3.10)
include(cmake/GetGitVersion.cmake)
get_git_version(FULL_VERSION SEMANTICS_VERSION)
project(CPP_SAMPLE VERSION ${SEMANTICS_VERSION})
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(VERSION_UPDATE_FROM_GIT True)
set(FULL_VERSION ${FULL_VERSION})
add_subdirectory(src)